claude codeの導入 (#2)
* add gitignore

* add empty files

* add toolchain

* mod gitignore

* add cargo toml

* add apps

* add sample

* add cargo toml

* add logger

* add config

* add env

* add env

* move env value

* add log config

* add error structs

* add error define

* add error

* success buld

* buld server

* rename

* rename

* add pre members

* rename

* rename

* mod openapi

* fix typo

* add claude files

* translate CLAUDE.md to Japanese



* mod cluade settings

* mod git ignore

* delete file

* revert gitignore

* cleanup cargo

* impl domain

* hide default constructor

* use schema

* add uuid

* add domain::Error

* rename

* impl from

* Add PR template



---------
