# src/interface/rest-controller/src/schema/user/register/request.rs
@@ -1,0 +1,7 @@
+use serde::Deserialize;
+
+#[derive(Debug, Deserialize)]
+pub struct RegisterUserRequest {
+    pub id: String,
+    pub name: String,
+}
